# finease

./: .gitignore  404.html  README.md  index.html  init_setup.sh  mkdocs.yml  project_workflow.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yml  docs.yml  python-publish.yml
APIReference/: index.html
docs/: APIReference.md  index.md
research/: manual_test.ipynb
search/: search_index.json
tests/unit/: test_unit.py
