[metadata]
# Metadata about the project

# Name of the project
name = finease
# License for the project
license = MIT
# File containing the full text of the license
license_file = LICENSE
# Classifiers to categorize the project
classifiers = 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
# Options related to project dependencies and installation

# Packages to include in the distribution
packages = find:
# Dependencies required for the project
install_requires =
    requests
    ensure
# Python versions compatible with the project
python_requires >= 3.9

[options.extras_require]
# Additional dependencies for testing
testing =
    pytest
    mypy
    flake8
    tox
    black
    ensure

[options.package_data]
# Additional data files to include in the distribution

# Treat all .py files in the fincalc package as typing stubs. This is used for type hinting purposes.
finease = py.typed   

[flake8]
# Configuration options for Flake8 code linting tool

# Maximum line length allowed in the code
max-line-length = 160
# Files or directories to exclude from linting
exclude = __init__.py
